Yangilanish: yangi funksiya yana qo'shildi

--- a/index.html
+++ b/index.html
@@ -755,7 +755,7 @@
                 <h2>Summary<span class="content">(1 items)</span></h2>
                 <article class="subtotal">
                     <h6>Subtotal</h6>
-                    <p>6.75 USD</p>
+                    <p></p>
                 </article>
                 <article class="shipping">
                     <h6>Shipping</h6>
@@ -764,11 +764,66 @@
                 <hr>
                 <article class="total">
                     <h3>Total</h3>
-                    <p>6.75 USD</p>
+                    <p></p>
                 </article>
                 <button>Continue</button>
+                <input class="promo" type="text" placeholder="Promocode kiriting.....">
+                <span class="status-icon"></span>
             </div>
         </div>
+    </div>
+
+    <div class="shoppingbagcard" style="display: none;">
+        <h2>Shopping Bag</h2>
+        <div class="boxs">
+            <div class="leftbox">
+                <h3>Payment Method</h3>
+                <article class="cards">
+                    <article class="cardschild">
+                        <img src="./img/card.png" alt="">
+                        <p>Card</p>
+                        <input type="radio">
+                    </article>
+                    <article class="cardschild">
+                        <img src="./img/PayPal.png" alt="">
+                        <p>Paypal</p>
+                        <input type="radio">
+                    </article>
+                    <article class="cardschild">
+                        <img src="./img/GooglePay.png" alt="">
+                        <p>G Pay</p>
+                        <input type="radio">
+                    </article>
+                    <article class="cardschild">
+                        <img src="./img/ApplePay.png" alt="">
+                        <p>A Pay</p>
+                        <input type="radio">
+                    </article>
+
+                </article>
+            </div>
+            <div class="rightbox">
+                <h2>Summary<span class="content">(1 items)</span></h2>
+                <article class="subtotal">
+                    <h6>Subtotal</h6>
+                    <p></p>
+                </article>
+                <article class="shipping">
+                    <h6>Shipping</h6>
+                    <p>Free</p>
+                </article>
+                <hr>
+                <article class="total">
+                    <h3>Total</h3>
+                    <p></p>
+                </article>
+                <button class="countinue">Continue with</button>
+            </div>
+        </div>
+    </div>
+    <div class="modal" style="display: none;">
+        <img src="./img/Card 2.png" alt="">
+        <button class="close-modal">close</button>
     </div>
 
     <footer>
